# informative_website

./: FAQ.html  README.md  app.py  apptwo.py  barchart.html  base.html  cleanup.py  dash_app.py  informative_website.css  informative_website.html  informative_website.ipynb  output_file.csv  output_file.txt  preprocess.py  pyproject.toml  requirements.txt
data/processed/: cleaned.csv  data.csv
data/raw/: your_dataset.csv
dev/: Flask.ipynb  countries.db  countries.sql  dash_app.bak  explore.ipynb  parenth.py
src/: cleanup.py  create_sql.py  load_sql.py  main.py
static/: styles.css
templates/: FAQ.html  base.html  charts.html  data.html  graph.py  home.html  index.html  map.html  welcome.html
