[project]
name = "informative-website"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
dependencies = [
    "flask>=3.0.3",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "folium>=0.16.0",
    "geopy>=2.4.1",
    "loguru>=0.7.2",
    "tqdm>=4.66.4",
    "seaborn>=0.13.2",
    "dash>=2.17.0",
    "sqlalchemy>=2.0.30",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/informative_website"]
